# pyrekit-server

./: README.md  example.py  pyproject.toml  requirements.txt
src/pyrekit-server/: server.py
src/pyrekit_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
